# ctdl-gt

./: 0_va_9.cpp  0_va_9_sinh.cpp  CMakeLists.txt  P_n_k.cpp  atm.cpp  bac_than.py  bac_thang.cpp  bdn_1.cpp  bdn_2.cpp  ben_phai.cpp  ben_phai_dau_tien.cpp  bfs.cpp  bfs_vh.cpp  bien_doi_s-t.cpp  bieu_dien_do_thi_co_huong.cpp  bo_sung_phan_tu.cpp  boi_so.cpp  bubble_sort.cpp  cai_tui.cpp  cai_tui.py  canh_sang_ke.cpp  cap_so_tong_k.cpp  chia_2_mang_con_tong_long_nhat.cpp  chia_2_mang_con_tong_long_nhat.py  con_ech.cpp  cs.cs  danh_sach_ke_ma_tran_ke.cpp  danh_sach_ke_ma_tran_ke.py  dao_tu.cpp  dao_tu.py  dat_ten.cpp  day_con_k.cpp  day_con_tong_k.cpp  day_con_tong_lon_nhat.cpp  day_con_tong_lon_nhat.py  day_con_tong_s.cpp  day_so_1.cpp  day_tang_dai_nhat.cpp  dem_cap.cpp  dem_day.cpp  (+146 more)
THU/: dao_tu.cpp  dfs.cpp  hoan_vi_nguoc.cpp
aaaa/: h1.c  h2.c  h3.c  h4.c  h5.c  v1.c  v2.c  v3.c  v4.c
csharp/: Program.cs
ly_thuyet/buoi1/: bai_toan_liet_ke.cpp  hoan_vi_chuoi_so.cpp  hoan_vi_ke_tiep.cpp  liet_ke_to_hop.cpp  nhi_phan_n_bit1.py  tap_con_ke_tiep.cpp  tap_con_ke_tiep.py  tempCodeRunnerFile.cpp  test.cpp  test.py  xau_ab_dai_n.py
ly_thuyet/buoi2/: de_quy.cpp  de_quy_dem.cpp  de_quy_quay_lui.cpp  de_quy_thuan_nghich.cpp
ly_thuyet/buoi3(contest)/: hoan_vi_nguoc.cpp  phan_tich_so.cpp  tap_quan_su.cpp  xau_ab_dai_n.cpp
ly_thuyet/buoi4/: sap_dat_xau_ky_tu.py
ly_thuyet/buoi5(contest)/: dem_so_0.cpp  dem_so_0.py  gap_doi_day_so.cpp  nham_chu_so.cpp  phan_so.py  phan_so_don_vi.cpp  sap_xep_cv.py
ly_thuyet/buoi6(contest)/: day_tang_dai_nhat.cpp  so_lan_xuat_hien.cpp  so_nho_nhat_va_thu_2.cpp  to_hop.cpp  to_hop.py
ly_thuyet/contest/: hang_doi_1.cpp  ngan_xep_1.cpp  ngoac_dung.cpp  tinh_hau_to.cpp
thuchanh1/: di_chuyen_ma_tran.cpp  gia_tri_nho_nhat_xau.cpp  nhi_phan_n_bit1.cpp  phan_tu_khac_nhau.cpp  sap_dat_xau_ky_tu_1.cpp  sap_xep_cv_2.cpp  sap_xep_quan_hau_2.cpp  tu_dien.cpp
trr/: Thuật toán Prim.docx  dfs.cpp  prim.cpp  tempCodeRunnerFile.cpp
