cmake_minimum_required(VERSION 3.19)
project(ctdl_gt)

set(CMAKE_CXX_STANDARD 14)

add_executable(ctdl_gt
        ly_thuyet/buoi1/bai_toan_liet_ke.cpp
        ly_thuyet/buoi1/hoan_vi_ke_tiep.cpp
        ly_thuyet/buoi1/liet_ke_hoan_vi.cpp
        ly_thuyet/buoi1/liet_ke_to_hop.cpp
        ly_thuyet/buoi1/nhi_phan_n_bit1.cpp
        ly_thuyet/buoi1/tap_con_ke_tiep.cpp
        ly_thuyet/buoi1/tempCodeRunnerFile.cpp
        ly_thuyet/buoi1/test.cpp
        ly_thuyet/buoi1/xau_ab_dai_n.cpp
        ly_thuyet/buoi2/de_quy.cpp
        ly_thuyet/buoi2/de_quy_dem.cpp
        ly_thuyet/buoi2/de_quy_quay_lui.cpp
        ly_thuyet/buoi2/de_quy_thuan_nghich.cpp
        "ly_thuyet/buoi3(contest)/ab_dai_n.cpp"
        "ly_thuyet/buoi3(contest)/hoan_vi_nguoc.cpp"
        "ly_thuyet/buoi3(contest)/phan_tich_so.cpp"
        "ly_thuyet/buoi3(contest)/tap_quan_su.cpp"
        "ly_thuyet/buoi3(contest)/xau_ab_dai_n.cpp"
        ly_thuyet/buoi4/sap_dat_xau_ky_tu_1.cpp
        "ly_thuyet/buoi5(contest)/dem_so_0.cpp"
        "ly_thuyet/buoi5(contest)/gap_doi_day_so.cpp"
        "ly_thuyet/buoi5(contest)/nham_chu_so.cpp"
        "ly_thuyet/buoi5(contest)/phan_so_don_vi.cpp"
        "ly_thuyet/buoi5(contest)/sap_xep_cong_viec.cpp"
        "ly_thuyet/buoi5(contest)/tempCodeRunnerFile.cpp"
        "ly_thuyet/buoi6(contest)/day_tang_dai_nhat.cpp"
        "ly_thuyet/buoi6(contest)/sap_xep_theo_so_lan_xuat_hien.cpp"
        "ly_thuyet/buoi6(contest)/so_lan_xuat_hien.cpp"
        "ly_thuyet/buoi6(contest)/so_nho_nhat_va_thu_2.cpp"
        "ly_thuyet/buoi6(contest)/to_hop.cpp"
        ly_thuyet/contest/hang_doi_1.cpp
        ly_thuyet/contest/ngan_xep_1.cpp
        ly_thuyet/contest/ngoac_dung.cpp
        ly_thuyet/contest/tinh_hau_to.cpp
        thuchanh1/di_chuyen_ma_tran.cpp
        thuchanh1/gia_tri_nho_nhat_xau.cpp
        thuchanh1/gray1.cpp
        thuchanh1/mua_luong_thuc.cpp
        thuchanh1/nhi_phan_n_bit1.cpp
        thuchanh1/phan_tu_khac_nhau.cpp
        thuchanh1/sap_dat_xau_ky_tu_1.cpp
        thuchanh1/sap_xep_cv_2.cpp
        thuchanh1/sap_xep_quan_hau_2.cpp
        thuchanh1/tap_con_bang_nhau.cpp
        thuchanh1/tu_dien.cpp
        thuchanh1/xau_ab_dac_biet.cpp
        trr/dfs.cpp
        trr/prim.cpp
        trr/tempCodeRunnerFile.cpp
        0_va_9.cpp
        0_va_9_sinh.cpp
        atm.cpp
        bac_thang.cpp
        bdn_1.cpp
        bdn_2.cpp
        ben_phai_dau_tien.cpp
        bfs.cpp
        bien_doi_s-t.cpp
        bieu_dien_do_thi_co_huong.cpp
        bo_sung_phan_tu.cpp
        bubble_sort.cpp
        canh_sang_ke.cpp
        cap_so_tong_k.cpp
        chia_2_mang_con_tong_long_nhat.cpp
        con_ech.cpp
        danh_sach_ke_ma_tran_ke.cpp
        dao_tu.cpp
        day_con_tong_k.cpp
        day_con_tong_lon_nhat.cpp
        day_so_1.cpp
        day_tang_dai_nhat.cpp
        dem_day.cpp
        dem_so_0.cpp
        dequeue.cpp
        dfs_vo_huong.cpp
        di_chuyen_trong_me_cung.cpp
        doi_cho_chu_so.cpp
        doi_cho_truc_tiep.cpp
        doi_tien.cpp
        draft.cpp
        fibo_thu_n.cpp
        floor.cpp
        gap_doi_day_so.cpp
        giai_ma.cpp
        giai_ma_xau.cpp
        giao_3_day_so.cpp
        giao_3_day_so_van_toan.cpp
        gray1.cpp
        gray2.cpp
        gray3.cpp
        hahaha.cpp
        hang_doi_2.cpp
        he_co_so_k.cpp
        hoan_vi_tiep_theo.cpp
        hoan_vi_xau_ky_tu.cpp
        hop_giao_1.cpp
        ke_sang_canh.cpp
        ky_tu_1_pro.cpp
        loc_phat_1.cpp
        loc_phat_2.cpp
        loc_phat_3.cpp
        loc_trung.cpp
        luy_thua.cpp
        luy_thua_dao.cpp
        ma_so.cpp
        ma_tran_ke_sang_danh_sach_ke.cpp
        merge_sort.cpp
        mua_luong_thuc.cpp
        ngan_xep_2.cpp
        ngoac_doi_chieu.cpp
        ngoac_dung_dai_nhat.cpp
        nham_chu_so.cpp
        nhi_phan_1-n.cpp
        nhi_phan_ke_tiep.cpp
        nhi_phan_truoc.cpp
        nho_nhat_va_thu_hai.cpp
        noi_day.cpp
        P_n_k.cpp
        phan_tu_khac_nhau.cpp
        phan_tu_lon_nhat.cpp
        phan_tu_thu_k.cpp
        sap_dat_ky_tu_2.cpp
        sap_xep_012.cpp
        sap_xep_chen.cpp
        sap_xep_chon.cpp
        sap_xep_chu_so.cpp
        sap_xep_cong_viec.cpp
        sap_xep_day_con_lien_tuc.cpp
        sap_xep_quan_hau1.cpp
        sap_xep_tham_lam.cpp
        sap_xep_xen_ke.cpp
        so_buoc_it_nhat.cpp
        so_lan_xuat_hien.cpp
        so_may_man.cpp
        tap_con_bang_nhau.cpp
        tempCodeRunnerFile.cpp
        thu_tu_cap_ngoac.cpp
        thuat_toan_sinh.cpp
        tich_lon_nhat.cpp
        tich_lon_nhat_nho_nhat.cpp
        tich_nhi_phan.cpp
        tien_to.cpp
        tien_to_hau_to.cpp
        tim_day_xep_vong.cpp
        tim_kem.cpp
        tim_kiem_nhi_phan.cpp
        tim_max.cpp
        to_hop.cpp
        tong_cap_so_nguyen_to.cpp
        tong_gan_0.cpp
        tong_nho_nhat.cpp
        tron_hai_day.cpp
        xau_ab_dac_biet.cpp
        xau_con_chung_dai_nhat.cpp
        xau_fibo.cpp
        xep_theo_gttd.cpp
        xoa_dslk.cpp)
